* Added MemberCall create method for V1.
* Added filtered_list method to Company proxy model.
* Added AccountManagerMetrics proxy model.
* Added MonthlyRecurringRevenues proxy model.
* added V2::AccountManagerTodo todo_list method
* added V2::AccountManager member_call_summary method
* Renamed call_counts_by_attempt to call_counts_by_priority.
* Added priority to MemberCall proxy model.

=== 0.5.24 2015-03-19

* Add V2::Company debit method
* Add GenericStatus model
* Added the search method to V2::CommunicationCampaign.
* Added send_postcard_preview attribute to communication_campaign.

=== 0.5.23 2015-02-18

* Add account_level_transition parameter to company_subscription.create
* Updated parameter lists when changing a company account level.
* Renamed Company.creation_date to freetrial_start_date for both V1 and V2.

=== 0.5.22 2015-02-05

* Added MemberAggregateInsight proxy model.
* Added recommended_budget_status to the MemberInsightMetrics model.

=== 0.5.21 2015-01-21

* Added payment related fields to CompanySubscription proxy model.
* Removed sequence from front_template, category_default_offer_template, marketing_message_template
* Added MemberInsightMetrics fields: recommended_budget and top_five_customers
* Added feature fields to AccountLevel.
* Added new fields to the Communication Campaign.
* Updated the CommunicationCampaign proxy model attributes.
* Added transaction_grouping_interval to AlgorithmTestRun proxy model.
* Added new algorithm test result fields.

=== 0.5.20 2015-01-07

* Added recommended_budget to V2::CommunicationCampaign proxy model.
* Removed unneeded attribute from V2::FrontTemplate.
* Added CsvUpload index and process_file methods

=== 0.5.19 2014-12-22

* Added AlgorithmTestRun and AlgorithmTestRunContact proxy models.
* Added temp_s3_url attribute for FrontTemplate objects.
* Added FrontTemplate proxy model.
* Added CommunicationCampaign create method.

=== 0.5.18 2014-11-12
