@@ -7,6 +7,11 @@ module Lobbyist
         response = get("/v2/account-managers/#{admin_user_id}/todos.json")
         create_from_response(response['items'])
       end
+
+      def self.create(account_manager_id, params)
+        response = post("/v2/account-managers/#{account_manager_id}/todos/create.json", {'account_manager_todo' => params})
+        create_from_response(response)
+      end
     end
   end
 end
